<resources>
    <string name="app_name">Bank Sampah Sehat</string>
    <string name="harga">Daftar Harga</string>
    <string name="saldo">Saldo</string>
    <string name="jual">Jual</string>
    <string name="informasi">Informasi</string>
    <string name="nomortlp">0857-6363-1010</string>
    <string name="alamat"><a href="https://www.google.com/maps/place/Fakultas+Ilmu+Komputer+Universitas+Brawijaya/@-7.9530522,112.6141954,18.25z/data=!4m5!3m4!1s0x2e78827928958613:0xd600c9c3727a93aa!8m2!3d-7.9536916!4d112.6146732">Universitas Brawijaya</a></string>
    <string name="instagram"><a href="http://www.instagram.com">"@"banksampahsehatid</a></string>
    <string name="facebook"><a href="http://www.facebook.com">Bank Sampah Sehat Indonesia</a></string>
    <string name="web"><a href="http://www.google.com">banksampahsehat.co.id</a></string>
    <string name="tentangkami">Bank Sampah Sehat adalah sebuah aplikasi yang membantu Anda dalam bertransaksi sampah anorganik</string>
    <string name="pengertian">Bank Sampah Sehat adalah aplikasi android yang memudahkan Anda dalam menjual sampah</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Beranda</string>
    <string name="title_help">Bantuan</string>
    <string name="title_notif">Notifikasi</string>
    <string name="title_person">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="savingBookHeader">Buku Tangungan Anda</string>
    <string name="nomor">No.</string>
    <string name="tanggal">Tanggal</string>
    <string name="keterangan">Ket.</string>
    <string name="debet">Debet</string>
    <string name="kredit">Kredit</string>
    <string name="informationHeader">Informasi</string>
    <string name="informationTitleDefault">Lorem ipsum dolor sit amet, consectetur adipisicing elit</string>
    <string name="loren_ipsum_dolor">loren ipsum dolor</string>
    <string name="defaultTanggal">27/07/2018</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="longText">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem
        ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="gambar">gambar</string>
    <string name="lokasi">Tentukan lokasi Anda . . .</string>
    <string name="show_seach_icon">show seach icon</string>
    <string name="selesai">SELESAI</string>
    <string name="iniCoba">inicobainicobainicobainicoba</string>
    <string name="jenis_sampah_anda">Jenis sampah Anda . . .</string>
    <string name="berat_kg">. . . Kg</string>
    <string name="pilih">Pilih</string>
    <string name="penjualan_sampah">Penjualan Sampah</string>
    <string name="email">email</string>
    <string name="kata_sandi">kata sandi</string>
    <string name="belum_punya_akun">Belum punya akun? Daftarkan diri Anda</string>
    <string name="login">LOGIN</string>
    <string name="daftar">DAFTAR</string>
    <string name="sudah_punya_akun">Sudah punya akun? Silahkan masuk</string>
    <string name="ulangi_kata_sandi">ulangi kata sandi</string>
    <string name="lebih_lanjut">Lebih Lanjut</string>
    <string name="textOne">Bank Sampah Malang (BSM) yang telah dirintis sejak tahun 2011 ini tidak hanya bermanfaat bagi warga kota Malang dari aspek ekonomi dan lingkungan, namun juga mengundang prestasi tingkat regional hingga nasional. Berbagai dukungan berdatangan termasuk dari Menteri Lingkungan Hidup Prof. Dr. Baltazar Kambuaya ketika meresmikan salah satu unit BSM tahun 2012 silam. Beberapa kota di Indonesia juga melakukan studi banding di BSM dan mengundang tim BSM untuk presentasi di kotanya masing-masing, ingin belajar tentang konsep dan aplikasi BSM Malang.\n
        BSM Malang memiliki sistem usaha yang profesional, memiliki sarana yang lengkap seperti alat timbang, mesin penghancur botol plastik, mesin pembersih, truk/alat angkut skala kecil dan besar, kantor dan unit-unit cabang, gudang serta memiliki jaringan distribusi produksi akhir sampah.
Kini warga anggota BSM tidak lagi sembarangan membuang sampah karena ternyata sampah-sampah tersebut memiliki nilai ekonomis dan lumayan menghasilkan uang tunai. Kertas-kertas bekas, botol air mineral, besi bekas, tutupan botol bekas, kaleng-kaleng bekas dan lainnya bisa dikumpulkan dan kalau sudah cukup banyak bisa langsung ditimbang di kendaraan keliling BSM yang sewaktu-waktu datang dilingkungan sesuai permintaan/kebutuhan.\n
        Tidak berhenti disitu saja, BSM Malang juga melakukan sosialisasi gerakan lingkungan bersih dan sehat serta melakukan pembinaan terhadap masyarakat untuk mengolah sampah plastik bekas seperti bungkusan mie instan, bungkusan permen untuk dijadikan / dirajut / jahit menjadi aneka jenis barang seperti tas, pembungkus kue, hiasan dst.
BSM juga bekerjasama dengan kader lingkungan kota Malang untuk bersama-sama melakukan kerja sosial pembinaan masyarakat untuk memanfaatkan limbah, mengolah limbah, gerakan menanam dan merawat serta membantu dalam menjaga kebersihan lingkungan.\n
        Akhirnya kota Malang meraih ADIPURA KENCANA pada Juni 2013 lalu, yaitu penghargaan yang paling tinggi dibidang lingkungan (diatasnya ADIPURA). Ini adalah buah kerjasama masyarakat kota Malang, Pemerintah daerah, semua elemen termasuk kader lingkungan dan Bank Sampah Malang.\n
        Bank Sampah Malang (BSM) kini menjadi salah satu program unggulan yang diapresiasi secara nasional dan ikut mengundang berbagai prestasi lingkungan. Sudah dirasakan banyak manfaatnya oleh masyarakat kota Malang. Program dan konsep BSM bisa juga dilakukan oleh berbagai kelompok masyarakat, swasta atau usaha personal.
Tinggal bagaimana program bagus ini dilanjutkan agar semakin meningkat dan unit/cabangnya semakin luas. Kuncinya adalah melibatkan masyarakat secara luas dan jangan terlalu dikendalikan oleh pemerintah, pemerintah sebatas sebagai pendukung/fasilitator aja, bukanlah pengendali, maka konsep BSM pasti tambah maju.
</string>
    <string name="default_location">loren ipsum dolor loren ipsum dolor loren ipsum dolor loren ipsum dolor loren ipsum dolor loren ipsum dolor</string>
    <string name="garbage">Garbage</string>
    <string name="default_price">Rp 120.000,00</string>
    <string name="langsung">Langsung: </string>
    <string name="ditabung">Ditabung: </string>
    <string name="jenis_transaksi">Jenis Transaksi:</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="tanggal_transaksi">Tanggal Transaksi:</string>
    <string name="d_lokasi">Lokasi:</string>
    <string name="d_jenis_sampah">Jenis Sampah:</string>
    <string name="nominall">Nominal:</string>
    <string name="petugas">Petugas:</string>
    <string name="total_berat">Total Berat:</string>
    <string name="d_keterangan">Keterangan:</string>
    <string name="belum_selesai">Transaksi Sedang Diproses</string>
</resources>