<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="31">
            <TextView
                android:id="@+id/tv_nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nomor"
                android:textSize="10sp"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:gravity="center"
                android:textSize="10sp"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/tv_debet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debet"
                android:gravity="center"
                android:textSize="10sp"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/tv_kredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kredit"
                android:gravity="center"
                android:textSize="10sp"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo"
                android:textSize="10sp"
                android:gravity="center"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/tv_keterangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keterangan"
                android:textSize="10sp"
                android:gravity="center"
                android:layout_weight="6"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>