<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Sign.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:contentDescription="@string/gambar"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/new_ewaste_logo_primary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="15sp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor_white"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor_white"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/editTextPasswordValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ulangi_kata_sandi"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor_white"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="15sp"
                android:text="@string/sudah_punya_akun"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>